--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A simple way to generate svg line charts in nodejs",
   "main": "src/index.mjs",
   "scripts": {
-    "test": "ava --verbose"
+    "test": "ava --verbose",
+    "dev": "nodemon scripts/serve.mjs"
   },
   "keywords": [
     "node",
@@ -22,6 +23,7 @@
     "vhtml": "2.2.0"
   },
   "devDependencies": {
-    "ava": "3.15.0"
+    "ava": "3.15.0",
+    "nodemon": "2.0.7"
   }
 }
