--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "date-fns": "2.20.0",
     "htm": "3.0.4",
+    "param-case": "3.0.4",
     "vhtml": "2.2.0"
   },
   "devDependencies": {
