Finalize initial version

--- a/package.json
+++ b/package.json
@@ -2,11 +2,18 @@
   "name": "svg-line-chart",
   "version": "0.0.1",
   "description": "A simple way to generate svg line charts in JS",
-  "main": "src/index.mjs",
+  "source": "src/index.mjs",
+  "main": "dist/line-chart.js",
+  "exports": "./dist/line-chart.modern.js",
+  "module": "dist/line-chart.module.js",
+  "unpkg": "dist/line-chart.umd.js",
   "scripts": {
+    "build": "microbundle",
     "test": "ava --verbose",
-    "dev": "nodemon scripts/serve.mjs"
+    "dev": "nodemon scripts/serve.mjs",
+    "git:add": "git update-index --add ./dist/line-chart.js ./dist/line-chart.js.map ./dist/line-chart.modern.js ./dist/line-chart.modern.js.map ./dist/line-chart.module.js ./dist/line-chart.module.js.map ./dist/line-chart.umd.js ./dist/line-chart.umd.js.map"
   },
+  "pre-commit": ["test", "build", "git:add"],
   "keywords": [
     "node",
     "line",
@@ -25,6 +32,8 @@
   },
   "devDependencies": {
     "ava": "3.15.0",
-    "nodemon": "2.0.7"
+    "microbundle": "0.13.0",
+    "nodemon": "2.0.7",
+    "pre-commit": "1.2.2"
   }
 }
