--- a/package.json
+++ b/package.json
@@ -2,12 +2,21 @@
   "name": "svg-line-chart",
   "version": "0.2.0",
   "description": "A simple way to generate svg line charts in JS",
+  "type": "commonjs",
   "main": "dist/svg-line-chart.js",
+  "exports": {
+    ".": {
+      "require": "./dist/svg-line-chart.js",
+      "default": "./dist/svg-line-chart.mjs"
+    }
+  },
+  "module": "./dist/svg-line-chart.mjs",
   "browser": "dist/browser-svg-line-chart.js",
   "scripts": {
-    "build:node": "esbuild src/index.mjs --outfile=dist/svg-line-chart.js --bundle --platform=node --target=node14.16.1",
+    "build:node:cjs": "esbuild src/index.mjs --outfile=dist/svg-line-chart.js --bundle --platform=node --target=node14.16.1",
+    "build:node:esm": "esbuild src/index.mjs --outfile=dist/svg-line-chart.mjs --bundle --platform=node --target=node14.16.1 --format=esm",
     "build:browser": "esbuild src/index.mjs --outfile=dist/browser-svg-line-chart.js --bundle --minify --sourcemap --target=es6",
-    "build": "npm run build:node && npm run build:browser",
+    "build": "npm run build:node:cjs && npm run build:node:esm && npm run build:browser",
     "test": "ava --verbose",
     "dev": "nodemon scripts/serve.mjs",
     "git:add": "git update-index --add dist/browser-svg-line-chart.js dist/browser-svg-line-chart.js.map dist/svg-line-chart.js"
