added c8 code coverage and updated github actions .c8rc.json contains thresholds for code coverage

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,6 +29,6 @@ jobs:
       - run: npm ci
       - run: npm run build --if-present
       - name: Run tests with ${{ matrix.timezone }} timezone
-        run: npm test
+        run: npm run test:coverage
         env:
           TZ: ${{ matrix.timezone }}
