--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "build:browser": "esbuild src/index.mjs --outfile=dist/browser-svg-line-chart.js --bundle --minify --sourcemap --target=es6",
     "build": "npm run build:node:cjs && npm run build:node:esm && npm run build:browser",
     "test": "ava --verbose",
+    "test:coverage": "c8 --config .c8rc.json npm run test",
     "dev": "nodemon scripts/serve.mjs",
     "git:add": "git update-index --add dist/*"
   },
@@ -51,6 +52,7 @@
   },
   "devDependencies": {
     "ava": "3.15.0",
+    "c8": "^7.10.0",
     "htm": "^3.0.4",
     "nodemon": "2.0.7",
     "pre-commit": "1.2.2",
