--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,6 +28,8 @@ jobs:
           cache: 'npm'
       - run: npm ci
       - run: npm run build --if-present
+      - name: Run Eslint
+        run: npm run lint
       - name: Run tests with ${{ matrix.timezone }} timezone
         run: npm run test:coverage
         env:
