--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   "devDependencies": {
     "ava": "3.15.0",
     "c8": "^7.10.0",
+    "eslint": "^8.2.0",
     "htm": "^3.0.4",
     "nodemon": "2.0.7",
     "pre-commit": "1.2.2",
