--- a/package.json
+++ b/package.json
@@ -58,6 +58,13 @@
     "htm": "^3.0.4",
     "nodemon": "2.0.7",
     "pre-commit": "1.2.2",
+    "prettier": "^2.4.1",
     "vhtml": "^2.2.0"
+  },
+  "prettier": {
+    "trailingComma": "es5",
+    "tabWidth": 4,
+    "semi": false,
+    "singleQuote": true
   }
 }
