--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
     "ava": "3.15.0",
     "c8": "^7.10.0",
     "eslint": "^8.2.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "htm": "^3.0.4",
     "nodemon": "2.0.7",
     "pre-commit": "1.2.2",
