--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test:coverage": "c8 --config .c8rc.json npm run test",
     "dev": "nodemon scripts/serve.mjs",
     "git:add": "git update-index --add dist/*",
-    "lint": "eslint ./src/*",
+    "lint": "eslint ./src/** ./test/**",
     "check-format": "prettier --check .",
     "format": "prettier --write ."
   },
