--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "svg-line-chart",
   "version": "0.4.1",
   "description": "A simple way to generate svg line charts in JS",
+  "repository": "https://github.com/attestate/svg-line-chart",
   "type": "commonjs",
   "main": "dist/svg-line-chart.js",
   "exports": {
